--- a/MedicalTrackingApp/src/main/resources/edu/wpi/teame/views/serviceRequests/MedicalEquipmentDeliveryServiceRequestPage.fxml
+++ b/MedicalTrackingApp/src/main/resources/edu/wpi/teame/views/serviceRequests/MedicalEquipmentDeliveryServiceRequestPage.fxml
@@ -40,7 +40,7 @@
                   <Font size="24.0" />
                </font>
             </Text>
-            <JFXButton fx:id="submitButton" buttonType="RAISED" text="Send" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="10" GridPane.valignment="CENTER">
+            <JFXButton fx:id="submitButton" buttonType="RAISED" text="Send" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="10" GridPane.valignment="CENTER">
                <font>
                   <Font size="16.0" />
                </font>
@@ -81,11 +81,6 @@
                </GridPane.margin>
             </TextField>
             <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text" text="Start Time:" GridPane.halignment="RIGHT" GridPane.rowIndex="4" />
-            <TextField fx:id="roomNumber" promptText="Enter patient room number..." GridPane.columnIndex="1" GridPane.rowIndex="2">
-               <GridPane.margin>
-                  <Insets left="10.0" right="10.0" />
-               </GridPane.margin>
-            </TextField>
             <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text" text="Room Number:" GridPane.halignment="RIGHT" GridPane.rowIndex="2" />
             <TextField fx:id="patientName" promptText="Enter patient name..." GridPane.columnIndex="1" GridPane.rowIndex="1">
                <GridPane.margin>
@@ -103,6 +98,12 @@
                   <Insets left="10.0" right="10.0" />
                </GridPane.margin>
             </TextField>
+            <JFXButton fx:id="clearButton" buttonType="RAISED" onAction="#clearText" text="Clear" GridPane.halignment="CENTER" GridPane.rowIndex="10">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </JFXButton>
+            <JFXComboBox fx:id="roomNumber" prefHeight="26.0" prefWidth="220.0" promptText="Choose. equipment.." styleClass="combo-box" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
          </children>
       </GridPane>
    </children>
