--- a/MedicalTrackingApp/src/main/resources/edu/wpi/teame/view/tabs/MedicalEquipmentDeliveryServiceRequestPage.fxml
+++ b/MedicalTrackingApp/src/main/resources/edu/wpi/teame/view/tabs/MedicalEquipmentDeliveryServiceRequestPage.fxml
@@ -12,16 +12,17 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="580.0" prefWidth="800.0" styleClass="anchor-pane" stylesheets="@../../css/mainStyle.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.wpi.teame.view.controllers.serviceRequests.MedicalEquipmentDeliveryServiceRequestPageServiceRequestController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="580.0" prefWidth="800.0" styleClass="anchor-pane" stylesheets="@../../css/mainStyle.css"
+   xmlns="http://javafx.com/javafx/17"
+   xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.wpi.teame.view.controllers.serviceRequests.MedicalEquipmentDeliveryServiceRequestPageServiceRequestController">
    <children>
       <GridPane prefHeight="580.0" prefWidth="800.0">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+         </columnConstraints>
+         <rowConstraints>
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -31,9 +32,9 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+         </rowConstraints>
          <children>
             <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="header" text="Medical Equipment Delivery Service Request" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
                <font>
@@ -45,42 +46,42 @@
                   <Font size="16.0" />
                </font>
             </JFXButton>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text" text="Status of Request:" GridPane.halignment="RIGHT" GridPane.rowIndex="9" />
-            <JFXComboBox fx:id="requestState" promptText="Choose status..." styleClass="combo-box" GridPane.columnIndex="1" GridPane.rowIndex="9">
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text" text="Status of Request:" GridPane.halignment="RIGHT" GridPane.rowIndex="8" />
+            <JFXComboBox fx:id="requestState" promptText="Choose status..." styleClass="combo-box" GridPane.columnIndex="1" GridPane.rowIndex="8">
                <GridPane.margin>
                   <Insets left="10.0" right="10.0" />
                </GridPane.margin>
             </JFXComboBox>
-            <JFXComboBox fx:id="equipmentNeeded" promptText="Choose. equipment.." styleClass="combo-box" GridPane.columnIndex="1" GridPane.rowIndex="8">
+            <JFXComboBox fx:id="equipmentNeeded" promptText="Choose. equipment.." styleClass="combo-box" GridPane.columnIndex="1" GridPane.rowIndex="7">
                <GridPane.margin>
                   <Insets left="10.0" right="10.0" />
                </GridPane.margin>
             </JFXComboBox>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text" text="Equipment Needed:" GridPane.halignment="RIGHT" GridPane.rowIndex="8" />
-            <TextField fx:id="nameAssigned" promptText="Enter assigned staff..." GridPane.columnIndex="1" GridPane.rowIndex="7">
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text" text="Equipment Needed:" GridPane.halignment="RIGHT" GridPane.rowIndex="7" />
+            <TextField fx:id="nameAssigned" promptText="Enter assigned staff..." GridPane.columnIndex="1" GridPane.rowIndex="6">
                <GridPane.margin>
                   <Insets left="10.0" right="10.0" />
                </GridPane.margin>
             </TextField>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text" text="Request Assigned To:" GridPane.halignment="RIGHT" GridPane.rowIndex="7" />
-            <DatePicker fx:id="datePicker" promptText="Choose delivery date..." styleClass="calendar-picker" GridPane.columnIndex="1" GridPane.rowIndex="6">
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text" text="Request Assigned To:" GridPane.halignment="RIGHT" GridPane.rowIndex="6" />
+            <DatePicker fx:id="datePicker" promptText="Choose delivery date..." styleClass="calendar-picker" GridPane.columnIndex="1" GridPane.rowIndex="5">
                <GridPane.margin>
                   <Insets left="10.0" right="10.0" />
                </GridPane.margin>
             </DatePicker>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text" text="Date:" GridPane.halignment="RIGHT" GridPane.rowIndex="6" />
-            <TextField fx:id="endTime" promptText="Enter end time..." GridPane.columnIndex="1" GridPane.rowIndex="5">
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text" text="Date:" GridPane.halignment="RIGHT" GridPane.rowIndex="5" />
+            <TextField fx:id="endTime" promptText="Enter end time..." GridPane.columnIndex="1" GridPane.rowIndex="4">
                <GridPane.margin>
                   <Insets left="10.0" right="10.0" />
                </GridPane.margin>
             </TextField>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text" text="End Time:" GridPane.halignment="RIGHT" GridPane.rowIndex="5" />
-            <TextField fx:id="startTime" promptText="Enter start time..." GridPane.columnIndex="1" GridPane.rowIndex="4">
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text" text="End Time:" GridPane.halignment="RIGHT" GridPane.rowIndex="4" />
+            <TextField fx:id="startTime" promptText="Enter start time..." GridPane.columnIndex="1" GridPane.rowIndex="3">
                <GridPane.margin>
                   <Insets left="10.0" right="10.0" />
                </GridPane.margin>
             </TextField>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text" text="Start Time:" GridPane.halignment="RIGHT" GridPane.rowIndex="4" />
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text" text="Start Time:" GridPane.halignment="RIGHT" GridPane.rowIndex="3" />
             <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text" text="Room Number:" GridPane.halignment="RIGHT" GridPane.rowIndex="2" />
             <TextField fx:id="patientName" promptText="Enter patient name..." GridPane.columnIndex="1" GridPane.rowIndex="1">
                <GridPane.margin>
