--- a/MedicalTrackingApp/src/main/resources/edu/wpi/teame/view/tabs/SettingsPage.fxml
+++ b/MedicalTrackingApp/src/main/resources/edu/wpi/teame/view/tabs/SettingsPage.fxml
@@ -44,6 +44,37 @@
                   <Font size="16.0" />
                </font>
             </Button>
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text" text="Language: " GridPane.halignment="RIGHT" GridPane.rowIndex="2" />
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text" text="Color: " GridPane.halignment="RIGHT" GridPane.rowIndex="3" />
+            <ComboBox fx:id="languageComboBox" prefHeight="26.0" prefWidth="496.0" promptText="Change Language..." GridPane.columnIndex="1" GridPane.rowIndex="2">
+               <GridPane.margin>
+                  <Insets left="10.0" right="10.0" />
+               </GridPane.margin>
+               <padding>
+                  <Insets left="10.0" />
+               </padding>
+            </ComboBox>
+            <ComboBox fx:id="colorComboBox" prefHeight="26.0" prefWidth="510.0" promptText="Change Color..." GridPane.columnIndex="1" GridPane.rowIndex="3">
+               <GridPane.margin>
+                  <Insets left="10.0" right="10.0" />
+               </GridPane.margin>
+               <padding>
+                  <Insets left="10.0" />
+               </padding>
+            </ComboBox>
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text" text="Accessibility:" GridPane.halignment="RIGHT" GridPane.rowIndex="4">
+               <GridPane.margin>
+                  <Insets />
+               </GridPane.margin>
+            </Text>
+            <ComboBox fx:id="accessibilityComboBox" prefHeight="26.0" prefWidth="315.0" promptText="Accessibility..." GridPane.columnIndex="1" GridPane.rowIndex="4">
+               <GridPane.margin>
+                  <Insets left="10.0" right="10.0" />
+               </GridPane.margin>
+               <padding>
+                  <Insets left="10.0" />
+               </padding>
+            </ComboBox>
          </children>
 
         </GridPane>
