--- a/MedicalTrackingApp/src/main/resources/edu/wpi/teame/view/tabs/NewLaundryServiceRequestPage.fxml
+++ b/MedicalTrackingApp/src/main/resources/edu/wpi/teame/view/tabs/NewLaundryServiceRequestPage.fxml
@@ -3,6 +3,8 @@
 <?import com.jfoenix.controls.JFXComboBox?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -27,13 +29,13 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="88.99997558593748" minHeight="10.0" prefHeight="53.79996337890623" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="69.80002441406248" minHeight="10.0" prefHeight="65.00003662109373" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
             <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="header" text="Laundry Service Request" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text" text="Description:" GridPane.halignment="RIGHT" GridPane.rowIndex="7">
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text" text="Additional Info:" GridPane.halignment="RIGHT" GridPane.rowIndex="7">
                <GridPane.margin>
                   <Insets left="30.0" right="10.0" />
                </GridPane.margin>
@@ -63,9 +65,14 @@
                   <Insets right="10.0" />
                </GridPane.margin>
             </Text>
-            <TextField fx:id="requestDate" styleClass="text-box" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <TextField fx:id="location" styleClass="text-box" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-            <TextField fx:id="assignee" styleClass="text-box" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <TextField fx:id="location" promptText="Enter location..." styleClass="text-box" GridPane.columnIndex="1" GridPane.rowIndex="3">
+               <GridPane.margin>
+                  <Insets left="10.0" right="10.0" />
+               </GridPane.margin></TextField>
+            <TextField fx:id="assignee" promptText="Enter an assignee..." styleClass="text-box" GridPane.columnIndex="1" GridPane.rowIndex="4">
+               <GridPane.margin>
+                  <Insets left="10.0" right="10.0" />
+               </GridPane.margin></TextField>
             <Button fx:id="clear" mnemonicParsing="false" onAction="#clearText" text="Clear" GridPane.halignment="CENTER" GridPane.rowIndex="8">
                <font>
                   <Font size="16.0" />
@@ -74,16 +81,26 @@
                <font>
                   <Font size="16.0" />
                </font></Button>
-            <JFXComboBox fx:id="priority" prefHeight="26.0" prefWidth="226.0" styleClass="combo-box" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="5">
+            <JFXComboBox fx:id="priority" prefHeight="26.0" prefWidth="226.0" promptText="Choose priority..." styleClass="combo-box" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="5">
                <GridPane.margin>
                   <Insets left="10.0" right="10.0" />
                </GridPane.margin>
             </JFXComboBox>
-            <JFXComboBox fx:id="status" prefHeight="26.0" prefWidth="226.0" styleClass="combo-box" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="6">
+            <JFXComboBox fx:id="status" prefHeight="26.0" prefWidth="226.0" promptText="Choose status..." styleClass="combo-box" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="6">
                <GridPane.margin>
                   <Insets left="10.0" right="10.0" />
                </GridPane.margin>
             </JFXComboBox>
+            <DatePicker fx:id="requestDate" prefHeight="26.0" prefWidth="294.0" promptText="Enter a request date..." styleClass="calendar-picker" GridPane.columnIndex="1" GridPane.rowIndex="2">
+               <GridPane.margin>
+                  <Insets left="10.0" right="10.0" />
+               </GridPane.margin>
+            </DatePicker>
+            <TextArea fx:id="additionalInfo" prefHeight="200.0" prefWidth="267.0" promptText="Enter additional info..." styleClass="text-area" wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="7">
+               <padding>
+                  <Insets left="10.0" right="10.0" />
+               </padding>
+            </TextArea>
          </children>
       </GridPane>
    </children>
