--- a/MedicalTrackingApp/src/main/resources/edu/wpi/teame/view/tabs/FacilitiesMaintenanceServiceRequestPage.fxml
+++ b/MedicalTrackingApp/src/main/resources/edu/wpi/teame/view/tabs/FacilitiesMaintenanceServiceRequestPage.fxml
@@ -4,7 +4,7 @@
 <?import com.jfoenix.controls.JFXComboBox?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.DatePicker?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -12,101 +12,91 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="580.0" prefWidth="800.0" styleClass="anchor-pane" stylesheets="@../../css/mainStyle.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.wpi.teame.view.controllers.serviceRequests.FacilitiesMaintenanceServiceRequestPageServiceRequestController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="580.0" prefWidth="800.0" styleClass="anchor-pane" stylesheets="@../../css/mainStyle.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.wpi.teame.view.controllers.serviceRequests.FacilitiesSRPSRC">
    <children>
-      <GridPane layoutX="2.0" layoutY="4.0" prefHeight="580.0" prefWidth="800.0">
-        <columnConstraints>
+      <GridPane prefHeight="580.0" prefWidth="800.0">
+         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+         </columnConstraints>
+         <rowConstraints>
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
+            <RowConstraints maxHeight="100.0" minHeight="10.0" prefHeight="76.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="44.0" minHeight="0.0" prefHeight="41.0" vgrow="SOMETIMES" />
+         </rowConstraints>
          <children>
-            <Text fx:id="facilitiesMaintenanceServiceRequestText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="header" text="Facilities Maintenance Service Request" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+            <Text fx:id="facilitiesMaintenanceServiceRequestText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="header" text="Facilities Maintenance Service Request" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="CENTER">
                <font>
                   <Font size="24.0" />
                </font>
-            </Text>
-            <JFXButton fx:id="sendButton" buttonType="RAISED" text="Send" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="7" GridPane.valignment="CENTER">
-               <font>
-                  <Font size="16.0" />
-               </font>
-            </JFXButton>
-            <TextField fx:id="issueDescription" promptText="Enter issue description..." styleClass="text-box" GridPane.columnIndex="1" GridPane.rowIndex="6">
                <GridPane.margin>
-                  <Insets left="10.0" right="10.0" />
+                  <Insets top="10.0" />
                </GridPane.margin>
-            </TextField>
-            <Text fx:id="issueDescriptionText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text" text="Issue Description:" GridPane.halignment="RIGHT" GridPane.rowIndex="6">
+            </Text>
+            <Text fill="#e1e0e0" strokeType="OUTSIDE" strokeWidth="0.0" text="Request Date:" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
                <GridPane.margin>
                   <Insets right="10.0" />
                </GridPane.margin>
             </Text>
-            <JFXComboBox fx:id="chooseIssue" promptText="Choose..." styleClass="combo-box" GridPane.columnIndex="1" GridPane.rowIndex="5">
-               <GridPane.margin>
-                  <Insets left="10.0" right="10.0" />
-               </GridPane.margin>
-            </JFXComboBox>
-            <Text fx:id="chooseIssueText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text" text="Choose Issue:" GridPane.halignment="RIGHT" GridPane.rowIndex="5">
+            <Text fill="#e1e0e0" strokeType="OUTSIDE" strokeWidth="0.0" text="Destination:" GridPane.halignment="RIGHT" GridPane.rowIndex="2">
                <GridPane.margin>
                   <Insets right="10.0" />
                </GridPane.margin>
             </Text>
-            <DatePicker fx:id="reportDate" promptText="Choose maintenance date..." styleClass="calendar-picker" GridPane.columnIndex="1" GridPane.rowIndex="4">
+            <Text fill="#e1e0e0" strokeType="OUTSIDE" strokeWidth="0.0" text="Assignee:" GridPane.halignment="RIGHT" GridPane.rowIndex="3">
+               <GridPane.margin>
+                  <Insets right="10.0" />
+               </GridPane.margin>
+            </Text>
+            <Text fill="#e1e0e0" strokeType="OUTSIDE" strokeWidth="0.0" text="Priority:" GridPane.halignment="RIGHT" GridPane.rowIndex="4">
+               <GridPane.margin>
+                  <Insets left="10.0" right="10.0" />
+               </GridPane.margin>
+            </Text>
+            <Text fill="#e1e0e0" strokeType="OUTSIDE" strokeWidth="0.0" text="Status:" GridPane.halignment="RIGHT" GridPane.rowIndex="5">
+               <GridPane.margin>
+                  <Insets left="10.0" right="10.0" />
+               </GridPane.margin>
+            </Text>
+            <DatePicker fx:id="requestDatePicker" prefHeight="26.0" prefWidth="213.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <GridPane.margin>
                   <Insets left="10.0" right="10.0" />
                </GridPane.margin>
             </DatePicker>
-            <Text fx:id="dateText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text" text="Date:" GridPane.halignment="RIGHT" GridPane.rowIndex="4">
-               <GridPane.margin>
-                  <Insets right="10.0" />
-               </GridPane.margin>
-            </Text>
-            <TextField fx:id="floorNum" promptText="Enter patient floor..." styleClass="text-box" GridPane.columnIndex="1" GridPane.rowIndex="3">
+            <JFXComboBox fx:id="locationComboBox" prefHeight="26.0" prefWidth="201.0" promptText="Choose a location..." GridPane.columnIndex="1" GridPane.rowIndex="2">
                <GridPane.margin>
                   <Insets left="10.0" right="10.0" />
                </GridPane.margin>
-            </TextField>
-            <Text fx:id="floorText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text" text="Floor:" GridPane.halignment="RIGHT" GridPane.rowIndex="3">
-               <GridPane.margin>
-                  <Insets right="10.0" />
-               </GridPane.margin>
-            </Text>
-            <TextField fx:id="roomNum" promptText="Enter patient room number..." styleClass="text-box" GridPane.columnIndex="1" GridPane.rowIndex="2">
+            </JFXComboBox>
+            <JFXComboBox fx:id="employeeComboBox" prefHeight="26.0" prefWidth="222.0" promptText="Choose an employee..." GridPane.columnIndex="1" GridPane.rowIndex="3">
                <GridPane.margin>
                   <Insets left="10.0" right="10.0" />
                </GridPane.margin>
-            </TextField>
-            <Text fx:id="roomNumText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text" text="Room Number:" GridPane.halignment="RIGHT" GridPane.rowIndex="2">
-               <GridPane.margin>
-                  <Insets right="10.0" />
-               </GridPane.margin>
-            </Text>
-            <TextField fx:id="reporterName" promptText="Enter patient name..." styleClass="text-box" GridPane.columnIndex="1" GridPane.rowIndex="1">
+            </JFXComboBox>
+            <JFXComboBox fx:id="priorityComboBox" prefHeight="26.0" prefWidth="323.0" promptText="Choose priority..." GridPane.columnIndex="1" GridPane.rowIndex="4">
                <GridPane.margin>
                   <Insets left="10.0" right="10.0" />
                </GridPane.margin>
-            </TextField>
-            <Text fx:id="nameText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text" text="Patient Name:" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
+            </JFXComboBox>
+            <JFXComboBox fx:id="statusComboBox" prefHeight="26.0" prefWidth="339.0" promptText="Choose status..." GridPane.columnIndex="1" GridPane.rowIndex="5">
                <GridPane.margin>
-                  <Insets right="10.0" />
+                  <Insets left="10.0" right="10.0" />
+               </GridPane.margin>
+            </JFXComboBox>
+            <JFXButton fx:id="sendButton" text="Send" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="7" />
+            <JFXButton fx:id="clearButton" onAction="#clearText" text="Clear" GridPane.halignment="CENTER" GridPane.rowIndex="7" />
+            <Text fill="#e1e0e0" strokeType="OUTSIDE" strokeWidth="0.0" text="Additional Info:" GridPane.halignment="RIGHT" GridPane.rowIndex="6">
+               <GridPane.margin>
+                  <Insets left="10.0" right="10.0" />
                </GridPane.margin>
             </Text>
-            <JFXButton fx:id="clearButton" buttonType="RAISED" onAction="#clearText" text="Clear" GridPane.halignment="CENTER" GridPane.rowIndex="7">
-               <font>
-                  <Font size="16.0" />
-               </font>
-            </JFXButton>
+            <TextArea fx:id="descriptionTextArea" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="6" />
          </children>
       </GridPane>
    </children>
